Implement Participant dashboard and QR event joining
- Add `PesertaDashboardScreen`, ViewModel, and UI components for participant event listing.
- Implement QR code scanning using ZXing and manual code entry dialog for joining events.
- Add `getPesertaEvents` and `joinEventByQr` endpoints to `ApiService` and `EventRepository`.
- Update `PanitiaDashboardViewModel` to support client-side search and filtering.
- Revamp `CreateEventScreen` UI with improved styling and validation.
- Update `Event` model to handle nullable dates and standardize `qr_code` field.
- Add Camera permissions to AndroidManifest and include scanning dependencies.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Izin Akses Internet untuk akses API -->
+    <!-- Izin akses Internet untuk API -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Izin tulis storage (untuk simpan QR ke galeri, jika diperlukan) -->
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
+
+    <!-- Izin kamera untuk scan QR code -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- (Opsional tapi bagus) Menandai bahwa aplikasi memakai kamera belakang -->
+    <uses-feature
+        android:name="android.hardware.camera.any"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
